[gd_scene load_steps=5 format=3 uid="uid://gnaxaeefsf1i"]

[ext_resource type="Script" uid="uid://b5ahx1u0rsq3l" path="res://player/player_script/player.gd" id="1_uappl"]
[ext_resource type="PackedScene" uid="uid://3npwrhgo0mx3" path="res://avatars/Avatar1.glb" id="2_uappl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kdsk4"]
radius = 0.4736328
height = 2.9526367

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_onrkg"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CameraOrigin:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D" groups=["enemy", "player"]]
script = ExtResource("1_uappl")

[node name="Avatar1" parent="." instance=ExtResource("2_uappl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, 0)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Avatar1/Armature/Skeleton3D" index="1"]
transform = Transform3D(-0.13176756, -0.98759997, -0.08534357, -0.08534388, -0.07447223, 0.9935643, -0.9876004, 0.13820317, -0.07447253, -0.48422372, 1.2036724, -0.0123389885)
bone_name = "RightHand"
bone_idx = 47

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.52, 0, 0, 0, 0.52, 0, 0, 0, 0.52, 0.10138081, 0.7667035, 0)
shape = SubResource("CapsuleShape3D_kdsk4")

[node name="CameraOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.752012, -0.25596)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraOrigin"]
transform = Transform3D(-0.999523, -1.45519e-09, -0.0308875, 0.000410233, 0.999912, -0.0132752, 0.0308848, -0.0132816, -0.999435, -0.354002, 0.462555, 0)
spring_length = 2.5
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="CameraOrigin/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.99824, 0.0593064, 0, -0.0593064, 0.99824, 0.0116494, 0.717158, 1.30445)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Crosshair" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Crosshair"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AmmoLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 27.658
anchor_bottom = 14.475
offset_left = 938.0
offset_top = 499.0
offset_right = -88.32007
grow_horizontal = 2
grow_vertical = 2

[node name="HealthControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthLabel" type="Label" parent="CanvasLayer/HealthControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.45
anchor_top = 0.5
anchor_right = 4.05
anchor_bottom = 15.125001
offset_top = 527.0
offset_bottom = -6.1035156e-05

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
process_mode = 3
replication_config = SubResource("SceneReplicationConfig_onrkg")
metadata/global_position = Vector3(0, 0, 0)
metadata/global_rotation = Vector3(0, 0, 0)

[editable path="Avatar1"]
